--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
     "Jason Pearson <jason.d.pearson@gmail.com> (kaeawc.github.io)"
   ],
   "name":"authentication-example",
-  "version":"0.1",
+  "version":"0.0.1",
   "description":"An http server that demonstrates going from scratch to high level encryption based on best practices.",
   "keywords":"auth encryption crypto",
   "homepage":"https://github.com/kaeawc/node-auth-example",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaeawc/node-auth-example"
+  },
+  "dependencies": {
+    "redis": "0.9.0"
+  },
+  "main": "server",
+  "engines": {
+    "node": ">= 0.10.22"
+  }
 }
