--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "scripts": { "start": "node server.js" },
-  "contributors": [
-    "Jason Pearson <jason.d.pearson@gmail.com> (kaeawc.github.io)"
-  ],
   "name":"authentication-example",
   "version":"0.0.1",
   "description":"An http server that demonstrates going from scratch to high level encryption based on best practices.",
-  "keywords":"auth encryption crypto",
-  "homepage":"https://github.com/kaeawc/node-auth-example",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kaeawc/node-auth-example"
+  "main": "web.js",
+  "scripts": {
+    "test": "make"
   },
   "dependencies": {
     "redis": "0.9.0"
   },
-  "main": "server",
   "engines": {
     "node": ">= 0.10.21",
     "npm": "1.3.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaeawc/node-auth-example"
+  },
+  "keywords": [
+    "node",
+    "auth",
+    "encryption",
+    "crypto",
+    "http"
+  ],
+  "author": "Jason Pearson",
+  "license": "BSD"
 }
